# florina-elixir

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  HANDOFF.md  README.md  manage.py  mix.exs  pyproject.toml  railway.json  requirements.txt  runserver.bat  runserver.ps1
.deploy/: deploy.sh  install-systemd.sh  rollback.sh
.github/: dependabot.yml
.github/workflows/: _backend.yml  _frontend.yml  ci.yml  claude-code-review.yml  claude-security-review.yml  codeql.yml  deploy.yml  security.yml
.sindri/: secrets
assets/css/: app.css  fonts.css
assets/js/: app.js  theme.js
config/: config.exs  dev.exs  development.yml  prod.exs  runtime.exs  test.exs
docs/: APPLICATION-SPEC.md
docs/django-reference/: original-django-screens.md
lib/: florina.ex  florina_web.ex
lib/florina/: accounts.ex  admins.ex  anthropic.ex  application.ex  audit.ex  authz.ex  calendar.ex  calendar_events.ex  calls.ex  central_config.ex  clients.ex  emails.ex  enums.ex  inbox.ex  jobs_repo.ex  mailer.ex  methodologies.ex  oauth.ex  phone.ex  prompts.ex  release.ex  repo.ex  scenarios.ex  settings.ex  storage.ex  strings.ex  tenant_repo.ex  tenants.ex  tz.ex  vault.ex  visits.ex  voice_prompts.ex
lib/florina_web/: admin_auth.ex  router.ex  (+6 more)
proj_mes_voice/: __init__.py  asgi.py  middleware.py  settings.py  urls.py  wsgi.py
rel/: entrypoint.sh
voice/: admin.py  apps.py  constants.py  decorators.py  encryption.py  forms.py  models.py  placeholders.py  selectors.py  tasks.py  tests_visit_crud.py  urls.py  utils.py  views.py  webhook_security.py  webhook_views.py
(+331 files in other folders)
