[project]
name = "mes-voice"
version = "0.1.0"
description = "Django-based sales training and debrief application"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Django>=4.2.0,<5.0.0",
  "anthropic>=0.109.2",
  "cryptography>=48.0.1",
  "django-apscheduler>=0.6.2",
  "elevenlabs>=2.53.0",
  "google-api-python-client>=2.100.0",
  "google-auth-httplib2>=0.1.1",
  "google-auth-oauthlib>=1.1.0",
  "gunicorn>=23.0.0",
  "pdfplumber>=0.11.10",
  "phonenumbers>=9.0.32",
  "psycopg2-binary>=2.9.9",
  "python-decouple>=3.8",
  "requests>=2.31.0",
  "twilio>=8.10.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  ".venv",
  "build",
  "dist",
  "staticfiles",
  "media",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "UP",
  "SIM",
]
ignore = [
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 100
format_css = true
format_js = true
preserve_blank_lines = true
ignore = "H006,H031"
exclude = ".venv,build,dist,staticfiles,media"
